# ros2_turtlesim

./: .gitignore  README.md  frames_2026-03-12_12.39.39.gv  frames_2026-03-12_15.28.25.gv
src/turtle_autonomy/: package.xml  setup.py
src/turtle_autonomy/launch/: turtle_autonomy.launch.py
src/turtle_autonomy/turtle_autonomy/: autonomy_node.py  obstacle_server_node.py  spawn_turtles_node.py
src/turtle_interfaces/: CMakeLists.txt  package.xml
src/turtle_interfaces/srv/: GetRobotPoses.srv
src/turtle_odometry/: package.xml  setup.py
src/turtle_odometry/launch/: turtle_odom.launch.py
src/turtle_odometry/turtle_odometry/: odometry_node.py
